--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
-JWT_SECRET=
-GOOGLE_CLIENT_ID=
+JWT_SECRET=jdhdhsjdhskdsjds
+GOOGLE_CLIENT_ID=hjshjdhjdhsdjsndsj
 PORT=4000
-CLIENT_URL=
+CLIENT_URL=http://localhost:3000/
 MONGO_CONNECT=mongodb://localhost:27017/test
